--- a/package.json
+++ b/package.json
@@ -15,15 +15,16 @@
     "@angular/common": "~10.2.0",
     "@angular/compiler": "~10.2.0",
     "@angular/core": "~10.2.0",
-    "@angular/fire": "^6.0.5",
+    "@angular/fire": "^6.0.3",
     "@angular/forms": "~10.2.0",
     "@angular/platform-browser": "~10.2.0",
     "@angular/platform-browser-dynamic": "~10.2.0",
     "@angular/router": "~10.2.0",
     "@popperjs/core": "^2.5.4",
     "bootstrap": "^4.5.3",
-    "firebase": "^8.0.2",
+    "firebase": "^7.24.0",
     "jquery": "^3.5.1",
+    "ngx-infinite-scroll": "^10.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
